# web-voice-control

./: app.py  pyproject.toml
src/web_voice_control/frontend/: main_page.py
src/web_voice_control/math/: word2vec_external.py
src/web_voice_control/utils/: schema.py  stt.py
